Alignment Fix

--- a/personal-book/src/app/education/eduTab/style.css
+++ b/personal-book/src/app/education/eduTab/style.css
@@ -1,3 +1,3 @@
 .tabs{
-    padding: 10px;
+    margin-top: 10px;
 }
