--- a/personal-book/src/app/education/graduation/courses/course.css
+++ b/personal-book/src/app/education/graduation/courses/course.css
@@ -1,5 +1,5 @@
 .course-table{
-    margin: 20px;
+    margin: 0px;
 }
 
 .del-f{
