--- a/personal-book/src/app/education/graduation/semester/list/semester.css
+++ b/personal-book/src/app/education/graduation/semester/list/semester.css
@@ -1,5 +1,5 @@
 .semseter-table{
-    margin: 50px;
+    margin: 5px;
 }
 
 .cont{
