--- a/personal-book/src/app/globals.css
+++ b/personal-book/src/app/globals.css
@@ -19,7 +19,8 @@
 }
 
 .table{
-  margin: 20px;
+  margin-top: 5px;
+  margin-bottom: 5px;
   border: 1px;
   border-style: solid;
   justify-content: center;
@@ -91,7 +92,9 @@ span{
 }
 
 .options{
-  margin: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-right: 5px;
 }
 
 .head{
